--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         }
         
         .navbar {
-            background: rgb(3, 3, 105);
-            height: 56.48px;
+            background: rgb(5, 5, 85);
+            height: 58.3px;
             object-fit: cover;
             z-index: 1;
             top: 0;
@@ -121,7 +121,7 @@
         }
 
         .navbar:hover .Photography:hover .dropbtn {
-            background: rgba(210, 219, 254, 0.915);
+            background: rgb(210, 219, 254);
             color: #000;
             transition: 0.15s linear;
             cursor: pointer;
@@ -134,12 +134,13 @@
   padding: 1px;
   z-index: 1;
   box-shadow: 0 3px 0.45rem 0 rgba(162, 162, 162, 0.866);
+  border-top: 0.13rem solid rgb(7, 7, 115);
 }
 
         .Photography-content a {
             font-size: 15px;
             float: none;
-            color: #344589;
+            color: #07133d;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -178,7 +179,7 @@
         }
 
         .navbar:hover .Sport:hover .dropbtn {
-            background: rgba(210, 219, 254, 0.915);
+            background: rgb(210, 219, 254);
             color: #000;
             transition: 0.15s linear;
             cursor: pointer;
@@ -191,13 +192,13 @@
   padding: 1px;
   z-index: 1;
   box-shadow: 0 3px 0.45rem 0 rgba(162, 162, 162, 0.866);
-  box-shadow: 0 3px 0.4rem 0 rgba(135, 135, 135, 0.911);
+  border-top: 0.13rem solid rgb(7, 7, 115);
         }
 
         .Sport-content a {
             font-size: 15px;
             float: none;
-            color: #344589;
+            color: #07133d;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -218,7 +219,7 @@
             grid-template-columns: 0.5fr 0.5fr;
             justify-content: center;
             justify-items: center;
-            width: 22%;
+            width: 20%;
         }
 
         .Education {
@@ -236,7 +237,7 @@
         }
 
         .navbar:hover .Education:hover .dropbtn {
-            background: rgba(210, 219, 254, 0.915);
+            background: rgb(210, 219, 254);
             color: #000;
             transition: 0.15s linear;
             cursor: pointer;
@@ -246,6 +247,7 @@
             display: none;
   position: absolute;
   background: #fff;
+  border-top: 0.13rem solid rgb(7, 7, 115);
   padding: 1px;
   z-index: 1;
   box-shadow: 0 3px 0.45rem 0 rgba(162, 162, 162, 0.866);
@@ -256,7 +258,7 @@
         .Education-content a {
             font-size: 15px;
             float: none;
-            color: #344589;
+            color: #07133d;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -295,7 +297,7 @@
         }
 
         .navbar:hover .Videos:hover .dropbtn {
-            background: rgba(210, 219, 254, 0.915);
+            background: rgb(210, 219, 254);
             color: #000;
             transition: 0.15s linear;
             cursor: pointer;
@@ -308,12 +310,13 @@
   padding: 1px;
   z-index: 1;
   box-shadow: 0 3px 0.45rem 0 rgba(162, 162, 162, 0.866);
+  border-top: 0.13rem solid rgb(7, 7, 115);
         }
 
         .Videos-content a {
             font-size: 15px;
             float: none;
-            color: #344589;
+            color: #07133d;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -352,7 +355,7 @@
         }
 
         .navbar:hover .Photos:hover .dropbtn {
-            background: rgba(210, 219, 254, 0.915);
+            background: rgb(210, 219, 254);
             color: #000;
             transition: 0.15s linear;
             cursor: pointer;
@@ -364,6 +367,7 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
+  border-top: 0.13rem solid rgb(7, 7, 115);
   box-shadow: 0 3px 0.45rem 0 rgba(162, 162, 162, 0.866);
   width: 270px;
   z-index: 1;
@@ -372,7 +376,7 @@
         .Photos-content a {
             font-size: 15px;
             float: none;
-            color: #344589;
+            color: #07133d;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -411,7 +415,7 @@
         }
 
         .navbar:hover .Community:hover .dropbtn {
-            background: rgba(210, 219, 254, 0.915);
+            background: rgb(210, 219, 254);
             color: #000;
             transition: 0.25s linear;
             cursor: pointer;
@@ -422,6 +426,7 @@
   display: none;
   position: absolute;
   background: #fff;
+  border-top: 0.13rem solid rgb(7, 7, 115);
   padding: 1px;
   z-index: 1;
   box-shadow: 0 3px 0.4rem 0 rgba(135, 135, 135, 0.911);
@@ -430,7 +435,7 @@
         .Community-content a {
             font-size: 15px;
             float: none;
-            color: #344589;
+            color: #07133d;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -470,7 +475,7 @@
         }
 
         .navbar:hover .TikiYiki:hover .dropbtn {
-            background: rgba(210, 219, 254, 0.915);
+            background: rgb(210, 219, 254);
             color: #000;
             transition: 0.25s linear;
             cursor: pointer;
@@ -481,6 +486,7 @@
   position: absolute;
   background: #fff;
   padding: 1px;
+  border-top: 0.13rem solid rgb(7, 7, 115);
   z-index: 1;
   box-shadow: 0 3px 0.45rem 0 rgba(162, 162, 162, 0.866);
   width: 265px;
@@ -490,7 +496,7 @@
         .TikiYiki-content a {
             font-size: 15px;
             float: none;
-            color: #344589;
+            color: #07133d;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -530,7 +536,7 @@
         }
 
         .navbar:hover .Disability:hover .dropbtn {
-            background: rgba(210, 219, 254, 0.915);
+            background: rgb(210, 219, 254);
             color: #000;
             transition: 0.25s linear;
             cursor: pointer;
@@ -541,6 +547,7 @@
   position: absolute;
   background: #fff;
   padding: 1px;
+  border-top: 0.13rem solid rgb(7, 7, 115);
   z-index: 1;
   box-shadow: 0 3px 0.45rem 0 rgba(162, 162, 162, 0.866);
   width: 270px;
@@ -549,7 +556,7 @@
         .Disability-content a {
             font-size: 15px;
             float: none;
-            color: #344589;
+            color: #07133d;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
