--- a/index.html
+++ b/index.html
@@ -3316,11 +3316,14 @@ function showSlides(n) {
 
             <div>
                 <a href="https://www.nhl.com" target="blank">NHL-America</a>
+                <a href="https://www.nfl.com/" target="blank">NFL-America</a>
                 <a href="https://copaamerica.com/en/" target="blank">COPA America</a>
             </div>
         <div>
                 <a href="https://www.cafonline.com" target="blank">CAF-Africa</a>
+                <a href="https://www.the-afc.com/en/home.html" target="blank">AFC-Asia</a>
                 <a href="https://www.uefa.com/" target="blank">UEFA-Europe</a>
+                
             </div>
         </div>
 
