--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 16px;
-            line-height: 31px;
+            line-height: 30px;
         }
 
         .Sport:hover .Sport-content {
@@ -271,7 +271,7 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 16px;
-            line-height: 31px;
+            line-height: 30px;
         }
 
         .Education:hover .Education-content {
@@ -329,7 +329,7 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 16px;
-            line-height: 31px;
+            line-height: 30px;
         }
 
         .Videos:hover .Videos-content {
@@ -389,7 +389,7 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 16px;
-            line-height: 31px;
+            line-height: 30px;
         }
 
         .Photos:hover .Photos-content {
@@ -448,7 +448,7 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 16px;
-            line-height: 31px;
+            line-height: 30px;
         }
 
         .Community:hover .Community-content {
@@ -496,7 +496,7 @@
         .TikiYiki-content a {
             font-size: 15px;
             float: none;
-            color: #07133d;
+            color: #031247;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -509,7 +509,7 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 16px;
-            line-height: 31px;
+            line-height: 30px;
             
         }
 
@@ -3424,7 +3424,7 @@ function showSlides(n) {
                             </b>
                             </p>
 
-                        <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px; padding: 5px; text-align: left;"><b>In Burkina Faso</b> as everywhere there is a lot of challenges about inclusiveness. Getting "<b>differently able people especially disabled
+                            <p style="font-family: arial; color: rgba(49, 49, 49, 0.768); font-size: 15px; line-height: 20px; padding: 5px;"><b>In Burkina Faso</b> as everywhere there is a lot of challenges about inclusiveness. Getting "<b>differently able people especially disabled
                             people</b>" included in communities is not regular on the daily basis. But it's so important to give them opportunities even their disabilities. Some organisations
                             are steadily working to get it done including to be trully inclusive.
                             <br>
@@ -3457,7 +3457,7 @@ function showSlides(n) {
                                 And Existed Since Its Creation. It Belongs To Human-Beings To Put It Into Practical Life. That's Why Inclusiveness in
                                 Education Also Matters. It's Not A Privilege But A Right For Every Kid Including Those Who Are Disabled And/Or Different.</b> </p>
 
-                        <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px; padding: 5px;"><b>Inclusive Education</b> has no
+                                <p style="font-family: arial; color: rgba(49, 49, 49, 0.768); font-size: 15px; line-height: 20px; padding: 5px;"><b>Inclusive Education</b> has no
                             room everywhere. It should not be a privilege but an intrinsic right.</p>
                     </div>
                 </a>
@@ -3479,9 +3479,9 @@ function showSlides(n) {
 
                 <a href="file:///C:/Users/User/Documents/Health-Care.html" target="_blank">
                     <div class="k-imagek3">
-                        <p style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;padding: 5px;">
+                        <p style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px; padding: 5px;">
                             <b>Health Care Is A Human Right Worldwide. But In Some Regions Around The World, People Are Dying Because Simply Of Malaria.</b> </p>
-                        <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px; padding: 5px;"><b>Health Care</b> is a human basic right worldwide. But not everyone has it everywhere. In Africa some people are dying from diseases that can be avoided. It should'nt.</p>
+                        <p style="font-family: arial; color: rgba(49, 49, 49, 0.768); font-size: 15px; line-height: 20px; padding: 5px;"><b>Health Care</b> is a human basic right worldwide. But not everyone has it everywhere. In Africa some people are dying from diseases that can be avoided. It should'nt.</p>
                     </div>
                 </a>
 
@@ -3505,7 +3505,7 @@ function showSlides(n) {
                     <div class="k-imagek4">
                         <p style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px; padding: 5px;">
                             <b>What Means Food Security? What Should Be Done To Challenge It Worldwide?</b> </p>
-                        <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px; padding: 5px;">While in some regions
+                            <p style="font-family: arial; color: rgba(49, 49, 49, 0.768); font-size: 15px; line-height: 20px; padding: 5px;">While in some regions
                             worldwide people have no more to worry about <b>Food Security</b>, in some other ones, it is
                             unfortunately not the same reality. There are ceaselessly worries in terms of Food Security. They have to struggle
                             hard to get needs met. In some worse cases, some died. But No Food Security, No Sustainable Development.
@@ -3535,7 +3535,7 @@ function showSlides(n) {
                             <b>Climate Change Is a Big Threat To Earth. It's Increasingly Causing Deadly Floodings, Wildfires and Droughts
                                 Around The World. There Is No Doubt That Climate Change Has More Endangered Earth Than Never Before. But
                                 Human-Being Has Provoked That Change Through His Continuing Agression. Now He Has to Figure It Out And Mitigate The Danger.</b> </p>
-                        <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px; padding: 5px;">
+                                <p style="font-family: arial; color: rgba(49, 49, 49, 0.768); font-size: 15px; line-height: 20px; padding: 5px;">
                             <b>Climate Change</b> has neither been a story nor a comedy. It's a mad reality.
                         </p>
                     </div>
@@ -3564,7 +3564,7 @@ function showSlides(n) {
                             <b>Disability Is Not Destiny. But For Disabled People Living In Exclusive Areas, They
                                 Have To Struggle Two Times Harder At Least Than Any Else To Get Their Needs Or Achieve.
                                 They are experiencing Toxic Environments Favored By A Lot Of Stigmatisations.</b> </p>
-                        <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px; padding: 5px;">As a disabled person, I experienced
+                                <p style="font-family: arial; color: rgba(49, 49, 49, 0.768); font-size: 15px; line-height: 20px; padding: 5px;">As a disabled person, I experienced
                             and still experiencing discriminations. It's too tough and challenging but It's Teaching . I
                             have to find out a way to get my rights respected
                             as human-being.</p>
@@ -3591,10 +3591,10 @@ function showSlides(n) {
                         <p
                             style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px; padding: 5px;">
                             <b>Culture Is Like A Backbone For Communities To Survive In The Biggest Family Of Diversity. It's A Way To
-                                Promote And Preserve Identity From Elders To Kids,
-                                From Grand-Parents To Grand-Sons. Everybody Plays A Key Role Of A Transmission In Order To
-                                Preserve It</b> </p>
-                        <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px; padding: 5px;">Promoting Saxiwama as a cultural
+                                Promote And Preserve Cultural Identity From Elders [Grand-Parents and Parents] To Kids or
+                                To Grand-Sons. Everyone Is Playing A Key Role Of Transmission In Order To
+                                Strongly Preserve It</b> </p>
+                                <p style="font-family: arial; color: rgba(49, 49, 49, 0.768); font-size: 15px; line-height: 20px; padding: 5px;">Promoting Saxiwama as a cultural
                             practice is a best way to preserve and transmit it.</p>
                     </div>
                 </a>
