--- a/index.html
+++ b/index.html
@@ -3010,7 +3010,7 @@ background: #717171;
             background: #fff;
             border: 0.1px solid rgba(97, 97, 97, 0.486);
             border-bottom: none;
-            color: #131313ef;
+            color: coral;
             box-shadow: 0px 5px 0.5rem 1px rgba(118, 118, 118, 0.565);
             transition: 0.45s ease;
         }
