--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
             margin-top: -16px;
         }
 
+        .navbar:hover .dropbtn {
+            border-top: 0.1rem solid rgb(5, 5, 85);
+        }
+
         .navbar a {
             display: block;
             float: left;
@@ -134,7 +138,7 @@
   padding: 1px;
   z-index: 1;
   box-shadow: 0 3px 0.45rem 0 rgba(162, 162, 162, 0.866);
-  border-top: 0.13rem solid rgb(7, 7, 115);
+  border-top: 0.1rem solid rgb(5, 5, 85);
 }
 
         .Photography-content a {
@@ -192,7 +196,7 @@
   padding: 1px;
   z-index: 1;
   box-shadow: 0 3px 0.45rem 0 rgba(162, 162, 162, 0.866);
-  border-top: 0.13rem solid rgb(7, 7, 115);
+  border-top: 0.1rem solid rgb(5, 5, 85);
         }
 
         .Sport-content a {
@@ -247,7 +251,7 @@
             display: none;
   position: absolute;
   background: #fff;
-  border-top: 0.13rem solid rgb(7, 7, 115);
+  border-top: 0.1rem solid rgb(5, 5, 85);
   padding: 1px;
   z-index: 1;
   box-shadow: 0 3px 0.45rem 0 rgba(162, 162, 162, 0.866);
@@ -310,7 +314,7 @@
   padding: 1px;
   z-index: 1;
   box-shadow: 0 3px 0.45rem 0 rgba(162, 162, 162, 0.866);
-  border-top: 0.13rem solid rgb(7, 7, 115);
+  border-top: 0.1rem solid rgb(5, 5, 85);
         }
 
         .Videos-content a {
@@ -367,7 +371,7 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  border-top: 0.13rem solid rgb(7, 7, 115);
+  border-top: 0.1rem solid rgb(5, 5, 85);
   box-shadow: 0 3px 0.45rem 0 rgba(162, 162, 162, 0.866);
   width: 270px;
   z-index: 1;
@@ -426,7 +430,7 @@
   display: none;
   position: absolute;
   background: #fff;
-  border-top: 0.13rem solid rgb(7, 7, 115);
+  border-top: 0.1rem solid rgb(5, 5, 85);
   padding: 1px;
   z-index: 1;
   box-shadow: 0 3px 0.4rem 0 rgba(135, 135, 135, 0.911);
@@ -486,7 +490,7 @@
   position: absolute;
   background: #fff;
   padding: 1px;
-  border-top: 0.13rem solid rgb(7, 7, 115);
+  border-top: 0.1rem solid rgb(5, 5, 85);
   z-index: 1;
   box-shadow: 0 3px 0.45rem 0 rgba(162, 162, 162, 0.866);
   width: 265px;
@@ -547,7 +551,7 @@
   position: absolute;
   background: #fff;
   padding: 1px;
-  border-top: 0.13rem solid rgb(7, 7, 115);
+  border-top: 0.1rem solid rgb(5, 5, 85);
   z-index: 1;
   box-shadow: 0 3px 0.45rem 0 rgba(162, 162, 162, 0.866);
   width: 270px;
