--- a/index.html
+++ b/index.html
@@ -3202,8 +3202,7 @@ function showSlides(n) {
 
                 <div>
                 <a href="https://www.worldbank.org/en/topic/disability" target="blank">Disability and Inclusion</a>
-                <a href="#"
-                    target="blank">Disability and Studies</a>
+                <a href="https://www.ohrc.on.ca/en/main-barriers-education-students-disabilities-fact-sheet"target="blank">Disability and Studies</a>
                 <a href="https://disabilitycreditcanada.com/top-16-famous-people-with-disabilities/"
                     target="blank">Famous Disabled People</a>
             </div>
