--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         .navbar:hover .Photography:hover .dropbtn {
             background: rgb(210, 219, 254);
             color: #000;
-            transition: 0.15s linear;
+            transition: 0.25s linear;
             cursor: pointer;
         }
 
@@ -144,7 +144,7 @@
         .Photography-content a {
             font-size: 15px;
             float: none;
-            color: #07133d;
+            color: #07133e;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -185,7 +185,7 @@
         .navbar:hover .Sport:hover .dropbtn {
             background: rgb(210, 219, 254);
             color: #000;
-            transition: 0.15s linear;
+            transition: 0.25s linear;
             cursor: pointer;
         }
 
@@ -202,7 +202,7 @@
         .Sport-content a {
             font-size: 15px;
             float: none;
-            color: #07133d;
+            color: #07133e;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -243,7 +243,7 @@
         .navbar:hover .Education:hover .dropbtn {
             background: rgb(210, 219, 254);
             color: #000;
-            transition: 0.15s linear;
+            transition: 0.25s linear;
             cursor: pointer;
         }
 
@@ -262,7 +262,7 @@
         .Education-content a {
             font-size: 15px;
             float: none;
-            color: #07133d;
+            color: #07133e;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -303,7 +303,7 @@
         .navbar:hover .Videos:hover .dropbtn {
             background: rgb(210, 219, 254);
             color: #000;
-            transition: 0.15s linear;
+            transition: 0.25s linear;
             cursor: pointer;
         }
 
@@ -320,7 +320,7 @@
         .Videos-content a {
             font-size: 15px;
             float: none;
-            color: #07133d;
+            color: #07133e;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -361,7 +361,7 @@
         .navbar:hover .Photos:hover .dropbtn {
             background: rgb(210, 219, 254);
             color: #000;
-            transition: 0.15s linear;
+            transition: 0.25s linear;
             cursor: pointer;
         }
 
@@ -380,7 +380,7 @@
         .Photos-content a {
             font-size: 15px;
             float: none;
-            color: #07133d;
+            color: #07133e;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -439,7 +439,7 @@
         .Community-content a {
             font-size: 15px;
             float: none;
-            color: #07133d;
+            color: #07133e;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -500,7 +500,7 @@
         .TikiYiki-content a {
             font-size: 15px;
             float: none;
-            color: #031247;
+            color: #07133e;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -560,7 +560,7 @@
         .Disability-content a {
             font-size: 15px;
             float: none;
-            color: #07133d;
+            color: #07133e;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
