--- a/index.html
+++ b/index.html
@@ -1435,7 +1435,9 @@
             padding-bottom: 5px;
             padding-right: 5px;
             padding-top: 20px;
+            border-top: 0.2px solid #9d9d9d7c;
             border-bottom: 0.2px solid #9d9d9d7c;
+
         }
 
         .content1 a:hover {
