--- a/index.html
+++ b/index.html
@@ -3509,7 +3509,7 @@ function showSlides(n) {
                 <a href="#" target="_blank">
                     <div class="k-imagek4">
                         <p style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px; padding: 5px;">
-                            <b>What Means Food Security? What Should Be Done To Challenge It Worldwide?</b> </p>
+                            <b>What Means Food Security? What Should Be Done To Fix Food Insecurity Worldwide?</b> </p>
                             <p style="font-family: arial; color: rgba(49, 49, 49, 0.768); font-size: 15px; line-height: 20px; padding: 5px;">While in some regions
                             worldwide people have no more to worry about <b>Food Security</b>, in some other ones, it is
                             unfortunately not the same reality. There are ceaselessly worries in terms of Food Security. They have to struggle
