--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             height: 45px;
             border: 2px solid #000!important;
             border-radius: 0.4rem;
+            margin-top: 1.85px;
         }
 
         .navbar img:hover {
