--- a/index.html
+++ b/index.html
@@ -303,13 +303,14 @@
 
         .navbar:hover .Videos:hover .dropbtn {
             background: rgb(210, 219, 254);
-            color: #000;
+            color: #000;            
             transition: 0.25s linear;
             cursor: pointer;
         }
 
         .Videos-content {
-            display: none;
+  
+  display: none;
   position: absolute;
   background: #fff;
   padding: 1px;
@@ -601,7 +602,6 @@
             align-items: center;
             text-align: center;
             border-top: 0.5px solid #fff;
-
         }
 
         h1 {
@@ -1351,7 +1351,7 @@
 
             100% {
                 left: -100%
-            }
+            } 
         }
 
         .k3-container {
@@ -2582,7 +2582,6 @@
             100%{left: -100%;}
         }
 
-
         .ct0 {
             display: flex;
             position: relative;
@@ -2639,7 +2638,6 @@
             font-family: 'Impact';
             transition: 0.15s ease-out;
             font-size: 27px;
-
         }
 
         .ct1 {
@@ -3013,6 +3011,7 @@ background: #717171;
             margin-top: -10px;
             border-radius: 0.2rem;
         }
+
         .reader:hover{
             background: #fff;
             border: 0.1px solid rgba(97, 97, 97, 0.486);
@@ -3021,6 +3020,7 @@ background: #717171;
             box-shadow: 0px 5px 0.5rem 1px rgba(118, 118, 118, 0.565);
             transition: 0.45s ease;
         }
+        
     </style>
 
     <title>home.html</title>
@@ -3174,7 +3174,7 @@ function showSlides(n) {
             <div class="TikiYiki-content">
 
             <div>
-                <a href="file:///C:/Users/User/Documents/accueil.html#Education" target="blank">Education</a>
+                <a href="file:///C:/Users/User/Documents/education.html" target="blank">Education</a>
                 <a href="file:///C:/Users/User/Documents/accueil.html#HLTHY" target="blank">Health Care</a>
             </div>
 
