--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         }
         
         .navbar {
-            background: rgb(4, 4, 80);
+            background: rgba(4, 4, 79, 0.914);
             height: 57px;
             object-fit: cover;
             z-index: 1;
@@ -138,14 +138,14 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 3px 0.45rem 0 rgba(162, 162, 162, 0.866);
+  box-shadow: 0 3px 0.3rem 0 rgba(187, 186, 186, 0.866);
   border-top: 0.1rem solid rgb(5, 5, 85);
 }
 
         .Photography-content a {
             font-size: 15px;
             float: none;
-            color: #07133e;
+            color: #06123f;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -196,14 +196,14 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 3px 0.45rem 0 rgba(162, 162, 162, 0.866);
+  box-shadow: 0 3px 0.3rem 0 rgba(187, 186, 186, 0.866);
   border-top: 0.1rem solid rgb(5, 5, 85);
         }
 
         .Sport-content a {
             font-size: 15px;
             float: none;
-            color: #07133e;
+            color: #06123f;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -255,7 +255,7 @@
   border-top: 0.1rem solid rgb(5, 5, 85);
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 3px 0.45rem 0 rgba(162, 162, 162, 0.866);
+  box-shadow: 0 3px 0.3rem 0 rgba(187, 186, 186, 0.866);
   width: 260px;
   z-index: 1;
         }
@@ -263,7 +263,7 @@
         .Education-content a {
             font-size: 15px;
             float: none;
-            color: #07133e;
+            color: #06123f;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -315,14 +315,14 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 3px 0.45rem 0 rgba(162, 162, 162, 0.866);
+  box-shadow: 0 3px 0.3rem 0 rgba(187, 186, 186, 0.866);
   border-top: 0.1rem solid rgb(5, 5, 85);
         }
 
         .Videos-content a {
             font-size: 15px;
             float: none;
-            color: #07133e;
+            color: #06123f;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -374,7 +374,7 @@
   padding: 1px;
   z-index: 1;
   border-top: 0.1rem solid rgb(5, 5, 85);
-  box-shadow: 0 3px 0.45rem 0 rgba(162, 162, 162, 0.866);
+  box-shadow: 0 3px 0.3rem 0 rgba(187, 186, 186, 0.866);
   width: 270px;
   z-index: 1;
         }
@@ -382,7 +382,7 @@
         .Photos-content a {
             font-size: 15px;
             float: none;
-            color: #07133e;
+            color: #06123f;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -435,13 +435,13 @@
   border-top: 0.1rem solid rgb(5, 5, 85);
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 3px 0.4rem 0 rgba(135, 135, 135, 0.911);
+  box-shadow: 0 3px 0.3rem 0 rgba(187, 186, 186, 0.866);
         }
 
         .Community-content a {
             font-size: 15px;
             float: none;
-            color: #07133e;
+            color: #06123f;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -494,7 +494,7 @@
   padding: 1px;
   border-top: 0.1rem solid rgb(5, 5, 85);
   z-index: 1;
-  box-shadow: 0 3px 0.45rem 0 rgba(162, 162, 162, 0.866);
+  box-shadow: 0 3px 0.3rem 0 rgba(187, 186, 186, 0.866);
   width: 265px;
   margin-left: 45px;
         }
@@ -502,7 +502,7 @@
         .TikiYiki-content a {
             font-size: 15px;
             float: none;
-            color: #07133e;
+            color: #06123f;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -562,7 +562,7 @@
         .Disability-content a {
             font-size: 15px;
             float: none;
-            color: #07133e;
+            color: #06123f;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
