--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 3px 0.3rem 0 rgba(187, 186, 186, 0.866);
+  box-shadow: -0.25px 2px 0.35rem 0 rgba(187, 186, 186, 0.866);
   border-top: 0.1rem solid rgb(5, 5, 85);
 }
 
@@ -196,7 +196,7 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 3px 0.3rem 0 rgba(187, 186, 186, 0.866);
+  box-shadow: -0.25px 2px 0.35rem 0 rgba(187, 186, 186, 0.866);
   border-top: 0.1rem solid rgb(5, 5, 85);
         }
 
@@ -255,7 +255,7 @@
   border-top: 0.1rem solid rgb(5, 5, 85);
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 3px 0.3rem 0 rgba(187, 186, 186, 0.866);
+  box-shadow: -0.25px 2px 0.35rem 0 rgba(187, 186, 186, 0.866);
   width: 260px;
   z-index: 1;
         }
@@ -315,7 +315,7 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 3px 0.3rem 0 rgba(187, 186, 186, 0.866);
+  box-shadow: -0.25px 2px 0.35rem 0 rgba(187, 186, 186, 0.866);
   border-top: 0.1rem solid rgb(5, 5, 85);
         }
 
@@ -374,7 +374,7 @@
   padding: 1px;
   z-index: 1;
   border-top: 0.1rem solid rgb(5, 5, 85);
-  box-shadow: 0 3px 0.3rem 0 rgba(187, 186, 186, 0.866);
+  box-shadow: -0.25px 2px 0.35rem 0 rgba(187, 186, 186, 0.866);
   width: 270px;
   z-index: 1;
         }
@@ -435,7 +435,7 @@
   border-top: 0.1rem solid rgb(5, 5, 85);
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 3px 0.3rem 0 rgba(187, 186, 186, 0.866);
+  box-shadow: -0.25px 2px 0.35rem 0 rgba(187, 186, 186, 0.866);
         }
 
         .Community-content a {
@@ -494,7 +494,7 @@
   padding: 1px;
   border-top: 0.1rem solid rgb(5, 5, 85);
   z-index: 1;
-  box-shadow: 0 3px 0.3rem 0 rgba(187, 186, 186, 0.866);
+  box-shadow: -0.25px 2px 0.35rem 0 rgba(187, 186, 186, 0.866);
   width: 265px;
   margin-left: 45px;
         }
@@ -555,7 +555,7 @@
   padding: 1px;
   border-top: 0.1rem solid rgb(5, 5, 85);
   z-index: 1;
-  box-shadow: 0 3px 0.3rem 0 rgba(187, 186, 186, 0.866);
+  box-shadow: -0.25px 2px 0.35rem 0 rgba(187, 186, 186, 0.866);
   width: 270px;
         }
 
