--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             grid-template-columns: 0.5fr 0.5fr;
             justify-content: center;
             justify-items: center;
-            width: 21%;
+            width: 19.45%;
         }
 
         .Education {
@@ -2973,20 +2973,19 @@ background: #717171;
             width: 150px;
             height: 30px;
             font-family: 'Barlow Condensed', sans-serif;
-            font-size: 13px;
+            font-size: 15px;
             padding-top: 20px;
             padding-bottom: 5px;
             margin-top: 10px;
             cursor: pointer;
-            border: 0.1px solid transparent;
         }
 
         .datime:hover {
             background: rgb(7, 152, 7)!important;
             color: yellow;
-            font-size: 13px;
+            font-size: 14px;
             border: 0.1px solid #fff;
-            transition: 0.26s linear;
+            transition: 0.28s linear;
         }
 
         .reader {
@@ -3002,11 +3001,11 @@ background: #717171;
             text-align: center;
             width: 84%;
             padding: 5px;
-            height: 45px;
+            height: 33px;
             font-family: 'Merienda';
-            font-size: 16.5px;
+            font-size: 16.35px;
             word-spacing: 1.8px;
-            border: 0.1px solid #9f9f9f7c;
+            border: 0.5px solidrgba(170, 169, 169, 0.161)c;
             box-shadow: 0px 0px 2px 1px rgba(152, 152, 152, 0.565);
             margin-top: -10px;
             border-radius: 0.2rem;
