--- a/index.html
+++ b/index.html
@@ -3521,7 +3521,7 @@ function showSlides(n) {
                 <a href="#" target="_blank">
                     <div class="k-imageL">
                         <figure>
-                            <img src="https://zupimages.net/up/22/30/y5gr.jpg" alt="Pasta" />
+                            <img src="https://zupimages.net/up/22/46/v9wi.jpg" alt="Pasta" />
                             <figcation
                                 style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: left; color: rgb(126, 126, 126)">
                                 Food Security Is Not A Reality For Many People</figcation>
