--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         }
         
         .navbar {
-            background: rgba(3, 3, 65, 0.914);
-            height: 57px;
+            background: rgba(2, 2, 61, 0.914);
+            height: 56px;
             object-fit: cover;
             z-index: 1;
             top: 0;
@@ -126,9 +126,9 @@
         }
 
         .navbar:hover .Photography:hover .dropbtn {
-            background: rgb(210, 219, 254);
-            color: #000;
-            transition: 0.25s linear;
+            border-bottom: 0.5rem solid rgb(255, 134, 5);
+            color: blue;
+            transition: 0.12s ease;
             cursor: pointer;
         }
 
@@ -179,14 +179,14 @@
             font-size: 21px;
             color: #fff;
             background: inherit;
-            padding: 14.75px 8px;
+            padding: 14px 8px;
             border: none;
         }
 
         .navbar:hover .Sport:hover .dropbtn {
-            background: rgb(210, 219, 254);
-            color: #000;
-            transition: 0.25s linear;
+            border-bottom: 0.5rem solid rgb(255, 134, 5);
+            color: blue;
+            transition: 0.12s ease;
             cursor: pointer;
         }
 
@@ -242,9 +242,9 @@
         }
 
         .navbar:hover .Education:hover .dropbtn {
-            background: rgb(210, 219, 254);
-            color: #000;
-            transition: 0.25s linear;
+            border-bottom: 0.5rem solid rgb(255, 134, 5);
+            color: blue;
+            transition: 0.12s ease;
             cursor: pointer;
         }
 
@@ -302,9 +302,9 @@
         }
 
         .navbar:hover .Videos:hover .dropbtn {
-            background: rgb(210, 219, 254);
-            color: #000;            
-            transition: 0.25s linear;
+            border-bottom: 0.5rem solid rgb(255, 134, 5);
+            color: blue;
+            transition: 0.12s ease;
             cursor: pointer;
         }
 
@@ -361,9 +361,9 @@
         }
 
         .navbar:hover .Photos:hover .dropbtn {
-            background: rgb(210, 219, 254);
-            color: #000;
-            transition: 0.25s linear;
+            border-bottom: 0.5rem solid rgb(255, 134, 5);
+            color: blue;
+            transition: 0.12s ease;
             cursor: pointer;
         }
 
@@ -421,9 +421,9 @@
         }
 
         .navbar:hover .Community:hover .dropbtn {
-            background: rgb(210, 219, 254);
-            color: #000;
-            transition: 0.25s linear;
+            border-bottom: 0.5rem solid rgb(255, 134, 5);
+            color: blue;
+            transition: 0.12s ease;
             cursor: pointer;
         }
 
@@ -481,9 +481,9 @@
         }
 
         .navbar:hover .TikiYiki:hover .dropbtn {
-            background: rgb(210, 219, 254);
-            color: #000;
-            transition: 0.25s linear;
+            border-bottom: 0.5rem solid rgb(255, 134, 5);
+            color: blue;
+            transition: 0.12s ease;
             cursor: pointer;
         }
 
@@ -542,9 +542,9 @@
         }
 
         .navbar:hover .Disability:hover .dropbtn {
-            background: rgb(210, 219, 254);
-            color: #000;
-            transition: 0.25s linear;
+            border-bottom: 0.5rem solid rgb(255, 134, 5);
+            color: blue;
+            transition: 0.12s ease;
             cursor: pointer;
         }
 
@@ -3007,7 +3007,7 @@ background: #717171;
             word-spacing: 1.8px;
             border: 0.5px solidrgba(170, 169, 169, 0.161)c;
             box-shadow: 0px 0px 2px 1px rgba(152, 152, 152, 0.565);
-            margin-top: -10px;
+            margin-top: -15px;
             border-radius: 0.2rem;
         }
 
