--- a/index.html
+++ b/index.html
@@ -3005,9 +3005,8 @@ background: #717171;
             font-family: 'Merienda';
             font-size: 16px;
             word-spacing: 1.8px;
-            border: 0.5px solidrgba(170, 169, 169, 0.161)c;
-            box-shadow: 0px 0px 2px 1px rgba(152, 152, 152, 0.565);
-            margin-top: -15px;
+            border: 0.5px solid rgba(206, 206, 206, 0.161)c;
+            box-shadow: 0 2px 3px 1px rgba(152, 152, 152, 0.565);
             border-radius: 0.2rem;
         }
 
