--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         }
         
         .navbar {
-            background: rgba(2, 2, 61, 0.914);
+            background: rgb(2, 2, 60);
             height: 56px;
             object-fit: cover;
             z-index: 1;
@@ -123,7 +123,7 @@
 
         .navbar:hover .Photography:hover .dropbtn {
             border-bottom: 0.35rem solid rgb(255, 135, 6);
-            color: blue;
+            color: rgb(0, 140, 255);
             transition: 0.12s ease;
             cursor: pointer;
         }
@@ -181,7 +181,7 @@
 
         .navbar:hover .Sport:hover .dropbtn {
             border-bottom: 0.35rem solid rgb(255, 135, 6);
-            color: blue;
+            color: rgb(0, 140, 255);
             transition: 0.12s ease;
             cursor: pointer;
         }
@@ -239,7 +239,7 @@
 
         .navbar:hover .Education:hover .dropbtn {
             border-bottom: 0.35rem solid rgb(255, 135, 6);
-            color: blue;
+            color: rgb(0, 140, 255);
             transition: 0.12s ease;
             cursor: pointer;
         }
@@ -299,7 +299,7 @@
 
         .navbar:hover .Videos:hover .dropbtn {
             border-bottom: 0.35rem solid rgb(255, 135, 6);
-            color: blue;
+            color: rgb(0, 140, 255);
             transition: 0.12s ease;
             cursor: pointer;
         }
@@ -358,7 +358,7 @@
 
         .navbar:hover .Photos:hover .dropbtn {
             border-bottom: 0.35rem solid rgb(255, 135, 6);
-            color: blue;
+            color: rgb(0, 140, 255);
             transition: 0.12s ease;
             cursor: pointer;
         }
@@ -418,7 +418,7 @@
 
         .navbar:hover .Community:hover .dropbtn {
             border-bottom: 0.35rem solid rgb(255, 135, 6);
-            color: blue;
+            color: rgb(0, 140, 255);
             transition: 0.12s ease;
             cursor: pointer;
         }
@@ -478,7 +478,7 @@
 
         .navbar:hover .TikiYiki:hover .dropbtn {
            border-bottom: 0.35rem solid rgb(255, 135, 6);
-            color: blue;
+           color: rgb(0, 140, 255);
             transition: 0.12s ease;
             cursor: pointer;
         }
@@ -539,7 +539,7 @@
 
         .navbar:hover .Disability:hover .dropbtn {
             border-bottom: 0.35rem solid rgb(255, 135, 6);
-            color: blue;
+            color: rgb(0, 140, 255);
             transition: 0.12s ease;
             cursor: pointer;
         }
@@ -1232,10 +1232,10 @@
             align-items: center;
             background: transparent;
             font-family: 'Barlow Condensed', sans-serif;
-            font-size: 15px;
-            color: rgba(125, 125, 125, 0.925);
+            font-size: 13px;
+            color: rgba(37, 37, 37, 0.865);
             margin-top: 4px;
-            text-align: left;
+            text-align: center;
         }
 
         .kw-container {
