--- a/index.html
+++ b/index.html
@@ -2997,13 +2997,13 @@ background: #717171;
             text-align: center;
             width: 84%;
             padding: 5px;
-            height: 31px;
+            height: 30.25px;
             font-family: 'Merienda';
             font-size: 16px;
-            word-spacing: 1.8px;
             border: 0.5px solid rgba(206, 206, 206, 0.161)c;
             box-shadow: 0 2px 3px 1px rgba(152, 152, 152, 0.565);
-            border-radius: 0.2rem;
+            border-radius: 0.1rem;
+            margin-top: -1px;
         }
 
         .reader:hover{
