--- a/index.html
+++ b/index.html
@@ -2808,12 +2808,12 @@
             justify-content: center;
             justify-items: center;
             column-gap: 5px;
-            width: 315px;
+            width: 325px;
             height: 505px;
-            padding: 5px;
+            padding: 3px;
             font-family: 'Barlow Condensed', sans-serif;
-            color: #2d2d2de2;
-            font-size: 19px;
+            color: #222222e7;
+            font-size: 18px;
             text-align: justify;
             line-height: 19.5px;
             background: transparent;
@@ -3010,7 +3010,7 @@ background: #717171;
             background: #fff;
             border: 0.1px solid rgba(97, 97, 97, 0.486);
             border-bottom: none;
-            color: coral;
+            color: crimson;
             box-shadow: 0px 5px 0.5rem 1px rgba(118, 118, 118, 0.565);
             transition: 0.45s ease;
         }
@@ -3532,9 +3532,9 @@ function showSlides(n) {
                     <div class="k-imagek5">
                         <p
                             style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px; padding: 5px;">
-                            <b>Climate Change Is a Big Threat To Earth. It's Increasingly Causing Deadly Floodings, Wildfires and Droughts
-                                Around The World. There Is No Doubt That Climate Change Has More Endangered Earth Than Never Before. But
-                                Human-Being Has Provoked That Change Through His Continuing Agression. Now He Has to Figure It Out And Mitigate The Danger.</b> </p>
+                            <b>Climate Change Is a Big Threat To Earth And To Human-Beings. It's Increasingly And Deadly Causing Floodings, Wildfires, Droughts,
+                                Earthquakes And Volcanos Around The World. There Is No Doubt Climate Change Has More Endangered Earth Than Never Before. But
+                                Human-Being Has Provoked It Through His Continuing Agression of Mother Nature. Now He Has to Stand up and Figure It Out In Order to Mitigate The Danger [Threat].</b> </p>
                                 <p style="font-family: arial; color: rgba(49, 49, 49, 0.768); font-size: 15px; line-height: 20px; padding: 5px;">
                             <b>Climate Change</b> has neither been a story nor a comedy. It's a mad reality.
                         </p>
@@ -3562,7 +3562,7 @@ function showSlides(n) {
                         <p
                             style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px; padding: 5px;">
                             <b>Disability Is Not Destiny. But For Disabled People Living In Exclusive Areas, They
-                                Have To Struggle Two Times Harder At Least Than Any Else To Get Their Needs Or Achieve.
+                                Have To Struggle Two Times Harder At Least Than Anyone To Get Their Needs And Achieve.
                                 They are experiencing Toxic Environments Favored By A Lot Of Stigmatisations.</b> </p>
                                 <p style="font-family: arial; color: rgba(49, 49, 49, 0.768); font-size: 15px; line-height: 20px; padding: 5px;">As a disabled person, I experienced
                             and still experiencing discriminations. It's too tough and challenging but It's Teaching . I
@@ -3979,17 +3979,17 @@ function showSlides(n) {
                             Immigration Is Heartbreaking
                         </div>
                         <div class="explanation2">
-                            As a physical disabled person who has legally immigrated to Canada, I have experienced many challenges. First
-                            of all seeking asylum is a long and difficult way. It matters with administrative procedures
-                            that can take at least 5 to 6 years long before getting the citizenship if there is a grant. It's been so hard because
-                            I am disabled in a new country and have to embrace a new culture.
-                            I did have neither parents, nor relatives in Quebec-Canada. After spending 3 days
-                            in my motel room my finances have been hit and I have had to look for other ways especially a cheap
-                            room to live. How to do as a newcomer in a cold country during the fall and have to live my first winter? One thing was sure, I
+                            As a physical disabled person who legally made it to Canada, I experienced many challenges on my way. First
+                            of all, seeking asylum is a long and difficult process. It matters with longer administrative procedures
+                            that can end at least after 5 to 6 years before getting the citizenship if there is a grant. It's been so hard because
+                            as a disabled person in a new country I have to embrace a new culture and get adapted.
+                            I had neither parents, nor relatives in Quebec-Canada at this time and I have to find out a way to stay. After spending 3 days
+                            in my motel room my finances have been hit. Thereby I have had to look for a cheap
+                            room to live. But how to do it as a newcomer in one of coldest countries around the world during winter time? Something was sure, I
                             couldn't afford to sleep outside.
-                            So I went to downtown Montreal in a shelter to explain my situation and ask for help. Fortunately
-                            I get granted asylum 2 years after my arrival. Then I applied for the permanent residency.
-                            That's why, I wanted to share some informations with anyone who will have to seek asylum.<a href="#">Learn more... </a>
+                            Then I went to downtown Montreal in a shelter in order to get my situation fixed. I spent half and a year to have my hearing 
+                            Fortunately I have been granted and applied for the permanent residency.
+                            So I wanted to share informations and share some experiences anyone who will be in need.<a href="#">Learn more... </a>
                         </div>
 
                     </div>
