--- a/index.html
+++ b/index.html
@@ -3602,10 +3602,10 @@ function showSlides(n) {
                 <a href="file:///C:/Users/User/Documents/saxiwam.html" target="_blank">
                     <div class="k-imageP">
                         <figure>
-                            <img src="https://zupimages.net/up/22/17/6sbt.jpg" alt="Tree Trunk" />
+                            <img src="https://live.staticflickr.com/7190/6816656354_65f2a54dcf_b.jpg" alt="Tree Trunk" />
                             <figcation
                                 style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: left; color: rgb(126, 126, 126)">
-                                Villagers usually gather under trees to talk in BF</figcation>
+                                Mask at the festival des masques of Dédougou-BFASO</figcation>
                         </figure>
                     </div>
                 </a>
