--- a/index.html
+++ b/index.html
@@ -3491,7 +3491,7 @@ function showSlides(n) {
                             <img src="https://www.zupimages.net/up/23/16/0k53.jpg" alt="CHR Ziniare" />
                             <figcation
                                 style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: left; color: rgb(126, 126, 126)">
-                                 Regional Hospital Facility of Ziniare
+                                 Regional Hospital Facility in Ziniare
                             </figcation>
                         </figure>
                     </div>
@@ -3532,9 +3532,8 @@ function showSlides(n) {
                     <div class="k-imagek5">
                         <p
                             style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px; padding: 5px;">
-                            <b>Climate Change Is a Big Threat To Earth And To Human-Beings. It's Increasingly And Deadly Causing Floodings, Wildfires, Droughts,
-                                Earthquakes And Volcanos Around The World. There Is No Doubt Climate Change Has More Endangered Earth Than Never Before. But
-                                Human-Being Has Provoked It Through His Continuing Agression of Mother Nature. Now He Has to Stand up and Figure It Out In Order to Mitigate The Danger [Threat].</b> </p>
+                            <b>Climate Change Is a Big Threat To Earth And To Human-Beings. Climate Change is Deadly Causing Floodings, Wildfires, Droughts,                    Earthquakes And Volcanos Around The World. There Is No Doubt that Climate Change Has More Endangered Earth Than Never Before. 
+                                But Human-Being Has Provoked It Through His Continual Agression of Mother Nature. Now He Has to Stand up and Figure It Out In Order to Mitigate The Danger [Threat].</b> </p>
                                 <p style="font-family: arial; color: rgba(49, 49, 49, 0.768); font-size: 15px; line-height: 20px; padding: 5px;">
                             <b>Climate Change</b> has neither been a story nor a comedy. It's a mad reality.
                         </p>
