--- a/index.html
+++ b/index.html
@@ -3983,12 +3983,12 @@ function showSlides(n) {
                             that can end at least after 5 to 6 years before getting the citizenship if there is a grant. It's been so hard because
                             as a disabled person in a new country I have to embrace a new culture and get adapted.
                             I had neither parents, nor relatives in Quebec-Canada at this time and I have to find out a way to stay. After spending 3 days
-                            in my motel room my finances have been hit. Thereby I have had to look for a cheap
-                            room to live. But how to do it as a newcomer in one of coldest countries around the world during winter time? Something was sure, I
+                            in my motel room my finances have been hit. Thereby I've had to look for a cheap
+                            room to live. But how to do it as a newcomer in one of the coldest countries around the world during winter time? Something was sure, I
                             couldn't afford to sleep outside.
                             Then I went to downtown Montreal in a shelter in order to get my situation fixed. I spent half and a year to have my hearing 
-                            Fortunately I have been granted and applied for the permanent residency.
-                            So I wanted to share informations and share some experiences anyone who will be in need.<a href="#">Learn more... </a>
+                            Fortunately I have been granted and I applied for the permanent residency.
+                            So I wanted to share informations and experiences with anyone who is in need.<a href="#">Learn more... </a>
                         </div>
 
                     </div>
