--- a/index.html
+++ b/index.html
@@ -3986,7 +3986,7 @@ function showSlides(n) {
                             in my motel room my finances have been hit. Thereby I've had to look for a cheap
                             room to live. But how to do it as a newcomer in one of the coldest countries around the world during winter time? Something was sure, I
                             couldn't afford to sleep outside.
-                            Then I went to downtown Montreal in a shelter in order to get my situation fixed. I spent half and a year to have my hearing 
+                            Then I went to downtown Montreal in a shelter in order to get my situation fixed. I spent half and a year to have my hearing. 
                             Fortunately I have been granted and I applied for the permanent residency.
                             So I wanted to share informations and experiences with anyone who is in need.<a href="#">Learn more... </a>
                         </div>
